Fix precommit check
Signed-off-by: Craig Perkins <cwperx@amazon.com>